; ModuleID = '/home/carl/AnghaBench/RetroArch/audio/drivers/extr_tinyalsa.c_pcm_params_get_max.c'
source_filename = "/home/carl/AnghaBench/RetroArch/audio/drivers/extr_tinyalsa.c_pcm_params_get_max.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pcm_params = type { i32 }
%struct.snd_pcm_hw_params = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.pcm_params*, i32)* @pcm_params_get_max to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @pcm_params_get_max(%struct.pcm_params* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.pcm_params*, align 8
  %5 = alloca i32, align 4
  %6 = alloca %struct.snd_pcm_hw_params*, align 8
  %7 = alloca i32, align 4
  store %struct.pcm_params* %0, %struct.pcm_params** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load %struct.pcm_params*, %struct.pcm_params** %4, align 8
  %9 = bitcast %struct.pcm_params* %8 to %struct.snd_pcm_hw_params*
  store %struct.snd_pcm_hw_params* %9, %struct.snd_pcm_hw_params** %6, align 8
  %10 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %6, align 8
  %11 = icmp ne %struct.snd_pcm_hw_params* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %23

13:                                               ; preds = %2
  %14 = load i32, i32* %5, align 4
  %15 = call i32 @pcm_param_to_alsa(i32 %14)
  store i32 %15, i32* %7, align 4
  %16 = load i32, i32* %7, align 4
  %17 = icmp slt i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %13
  store i32 0, i32* %3, align 4
  br label %23

19:                                               ; preds = %13
  %20 = load %struct.snd_pcm_hw_params*, %struct.snd_pcm_hw_params** %6, align 8
  %21 = load i32, i32* %7, align 4
  %22 = call i32 @param_get_max(%struct.snd_pcm_hw_params* %20, i32 %21)
  store i32 %22, i32* %3, align 4
  br label %23

23:                                               ; preds = %19, %18, %12
  %24 = load i32, i32* %3, align 4
  ret i32 %24
}

declare dso_local i32 @pcm_param_to_alsa(i32) #1

declare dso_local i32 @param_get_max(%struct.snd_pcm_hw_params*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
